--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Анкета для школы разработки интерфейсов</title>
-    <link href="/stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="stylesheets/screen.css" />
   </head>
-  <body id="page-home">
+  <body id="page-form">
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -25,7 +25,7 @@
       </dl>
       <dl>
         <dt class="strong">Год рождения</dt>
-        <dd>07.01.1989</dd>
+        <dd>1989</dd>
       </dl>
       <dl>
         <dt class="strong">Город, в котором живу</dt>
@@ -33,7 +33,7 @@
       </dl>
     </div>
     <div class="six columns">
-      <img src="/images/me.jpg" />
+      <img src="images/me.jpg" />
     </div>
   </div>
   <div>
@@ -79,7 +79,7 @@
   <div>
     <dl>
       <dt class="strong">Расскажите нам о вашем опыте разработки. Ничего не упускайте: это может быть как серьезный интерфейс, так и просто домашняя страничка.</dt>
-      <dd>Начал увлекаться веб разработкой и версткой где-то в 2001 году, когда учился. Активно же начал фрилансить изучать новые технологии только 3 года назад.</dd>
+      <dd>Начал увлекаться веб разработкой и версткой где-то в 2001 году, когда учился. Активно же начал фрилансить изучать новые технологии только 3 года назад. Подробнее можно посмотреть в <a href="https://www.free-lance.ru/users/gmotyara/">портфолио</a>.</dd>
     </dl>
     <dl>
       <dt class="strong">Какие языки программирования, фреймворки и технологии вы использовали? Сложились ли у вас личные предпочтения?</dt>
@@ -138,16 +138,16 @@
 </div>
 <div id="last-works" class="row">
   <div class="three columns">
-    <a href="http://polimerka-ekt.ru/colors/" class="thumbnail"><img src="/images/last-works/ppo.png" /></a>
+    <a href="http://polimerka-ekt.ru/colors/" class="thumbnail"><img src="images/last-works/ppo.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://kupi-admin.herokuapp.com/system-filters.html" class="thumbnail"><img src="/images/last-works/kupiru-admin.png" /></a>
+    <a href="http://kupi-admin.herokuapp.com/system-filters.html" class="thumbnail"><img src="images/last-works/kupiru-admin.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://aspektr.herokuapp.com/" class="thumbnail"><img src="/images/last-works/aspektrru.png" /></a>
+    <a href="http://aspektr.herokuapp.com/" class="thumbnail"><img src="images/last-works/aspektrru.png" /></a>
   </div>
   <div class="three columns">
-    <a href="http://aspektr.herokuapp.com/admin/lot-details.html" class="thumbnail"><img src="/images/last-works/aspektrru-admin.png" /></a>
+    <a href="http://aspektr.herokuapp.com/admin/lot-details.html" class="thumbnail"><img src="images/last-works/aspektrru-admin.png" /></a>
   </div>
 </div>
         </div>
@@ -170,7 +170,7 @@
     </footer>
   </body>
   <!-- http://api.yandex.ru/jslibs/libs.xml -->
-  <script src="http://yandex.st/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
-<script src="/javascripts/foundation/jquery.foundation.orbit.js" type="text/javascript"></script>
-<script src="/javascripts/jquery.site.js" type="text/javascript"></script>
+  <script src="http://yandex.st/jquery/1.8.1/jquery.min.js"></script>
+  <script src="javascripts/foundation/jquery.foundation.orbit.js"></script>
+  <script src="javascripts/jquery.site.js"></script>
 </html>
